# dwarf-v2

./: .gitignore  README  README.md  requirements.txt
audits/: dsqg_w_lexical_gap_mini.jsonl
docs/: 55pro-response.txt
kernels/: causal_ema_scan.py  dsqg_attention_v20_bf16_se.py  hierarchical_sparse_attn_v15_hisa.py  hierarchical_sparse_attn_v16_hisa_causal.py
scripts/: bench_dsqg_w_triton_sourcewise.py  bench_dsqg_w_width_cell_compile.py  build_dsqg_fineweb_edu_dedup_2b.py  build_dsqg_v2_semantic_curriculum.py  build_dwarf_v2_pretrain_shard.py  candidate_recall_audit_dsqg_w.py  compare_dsqg_d_vs_w_runs.py  compare_dsqg_kernel_overlay.py  dwarf_dataset_decontam_fast.py  evaluate_dsqg_w_checkpoint_base_val.py  evaluate_lexical_gap_checkpoints.py  frozen_trunk_objective_dsqg_w.py  fwe_dedup_artifact.py  identity_audit_dsqg_w.py  microtrain_dsqg_w_lexical_gap.py  parity_dsqg_w_reference.py  parse_dsqg_w_ladder.py  prepare_dolma3_20b_hardened.py  prepare_hisa_dsqg_fwe_2b.py  profile_dsqg_w_allopen_bottlenecks.py  profile_dsqg_w_bottlenecks.py  repair_dsqg_dataset_quarantine.py  run_corrected_dsqg_w_200step_matrix.py  run_dolma3_20b_external_trio.py  run_dsqg_w_100k_evaltime_attribution.py  run_dsqg_w_allopen_200k_screen.py  run_dsqg_w_checkpoint_diagnostics.py  run_dsqg_w_evidence_prior_telemetry.py  run_dsqg_w_full_training.py  run_dsqg_w_ladder.py  (+16 more)
tools/: passkey_eval.py  (+3 more)
tools/dwarf-oracle/: Cargo.toml  README.md
tools/dwarf-oracle/src/: config.rs  lib.rs  main.rs  report.rs  topology.rs  verification.rs
tools/dwarf-oracle/tests/: cli.rs  topology_contract.rs
(+94 files in other folders)
