[package]
name = "dwarf-oracle"
version = "0.1.0"
edition = "2024"
description = "CPU-first strict-causal topology oracle for DWARF V16 configurations"
license = "MIT OR Apache-2.0"

[lib]
name = "dwarf_oracle"
path = "src/lib.rs"

[[bin]]
name = "dwarf-oracle"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
